--- a/create_pin.html
+++ b/create_pin.html
@@ -13,28 +13,10 @@
     		<script src="plugins/jquery-1.11.2.js"></script>
     		<script type="text/javascript" src="cordova.js"></script>
     		<script src="js/create_pin.js"></script>
-			<script src="bootstrap-3.3.4/js/bootstrap.min.js"></script>
+        	<script src="bootstrap-3.3.4/js/bootstrap.min.js"></script>
          	<script src="plugins/bootbox.js"></script>
         	<script src="plugins/bootbox.min.js"></script>
     		
-<script>
-	$(document).ready(function(){
-				
-
-    document.addEventListener("deviceready",onDeviceReady,false);       
-});
-		
-function onDeviceReady() {
-	alert('hello');
- document.addEventListener("backbutton", onBackKeyDown, false);
- }
-
-function onBackKeyDown(e) {
-
-  e.preventDefault();
- 
-}
-</script>    		
 </head>
 
 <body>
@@ -48,7 +30,7 @@ function onBackKeyDown(e) {
         <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-        <img src="images/homecare_logo.png" alt style="height: 39px;margin-top: -8px;"">
+        <img src="images/homecare_logo.png" alt style="height: 39px;margin-top: -8px;">
         </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
