--- a/create_pin.html
+++ b/create_pin.html
@@ -19,7 +19,7 @@
     		
 </head>
 
-<body>
+<body onload="onDeviceReady()">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	 	<div class="container">
         <div class="navbar-header">
