--- a/regenerate_pin.html
+++ b/regenerate_pin.html
@@ -22,9 +22,10 @@
     		
 </head>
 
-<body>
+<body onload="onDeviceReady()">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<a href="patient_selection.html" onclick="window.history.go(-1); return false;"><img src="images/backbutton.png" alt style="height: 50px;float: left;""></a>
+		<a href="patient_selection.html" onclick="window.history.go(-1); return false;">
+                    <img src="images/backbutton.png" alt style="height: 50px;float: left;"></a>
      	<div class="container">
         <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -34,7 +35,7 @@
         <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-        <img src="images/homecare_logo.png" alt style="height: 39px;margin-top: -8px;"">
+        <img src="images/homecare_logo.png" alt style="height: 39px;margin-top: -8px;">
         </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
