--- a/regenerate_pin.html
+++ b/regenerate_pin.html
@@ -22,7 +22,7 @@
     		
 </head>
 
-<body onload="onDeviceReady()">
+<body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<a href="patient_selection.html" onclick="window.history.go(-1); return false;">
                     <img src="images/backbutton.png" alt style="height: 50px;float: left;"></a>
