--- a/patient_selection.html
+++ b/patient_selection.html
@@ -376,7 +376,7 @@ $('#collapse2').on('.panel-collapse.collapse.in'), function() {
 			    
 			}
 		 function ShowError(error) {
-		 
+		 alert("Error Function");
 		 
 		 $(".checkin_button").prop('disabled', false);
 		//$(".checkin_button").removeAttr('disabled');
