--- a/check_out.html
+++ b/check_out.html
@@ -191,7 +191,7 @@ Patient Signature</span></h5>
 <span class="col-sm-12 col-xs-12 col-md-12" style="top: 19px; margin-left: -34px;">		
 <button type="button" class="btn btn-primary btn-xs" id="clear_button" onclick="init_Sign_Canvas()" style="margin-left: 264px;">Clear</button>
 			</span>
-					<canvas id="canvas"  style="width: 280px; height: 125px; border: 1px solid rgb(0, 0, 0);">Canvas is not supported</canvas>
+					<canvas id="canvas"  style="border: 1px solid rgb(0, 0, 0);">Canvas is not supported</canvas>
 				</div>
 			</div></center>
 		
