--- a/visit_details.html
+++ b/visit_details.html
@@ -95,7 +95,7 @@
             <h3><p class="text-center" style="color:#000000">Visit Details</p></h3>
       
           
-  <span class="col-md-12 col-xs-12 col-sm-12">
+  <span class="col-md-12 col-xs-12 col-sm-12" style="padding-left: 0px;padding-right: 0px;">
 
 <div style="border: none;" class="col-md-12 col-xs-12 col-sm-12"> 
 <div class="input-group">
