--- a/check-in_summary.html
+++ b/check-in_summary.html
@@ -118,8 +118,8 @@
 
 <div  style="border: none;" class="col-md-6 col-xs-12 col-sm-6"> 
 <div class="input-group">
-  <span class="glyphicon glyphicon-time"  style="border: none;"></span>
-<span style=" background-color: none"  id="exampleInputscheduledtime1">Scheduled Time: </span>
+  <span class="glyphicon glyphicon-time"  style="border: none;">Scheduled Time:</span>
+<span style=" background-color: none"  id="exampleInputscheduledtime1"></span>
       </div>
       </div>
       
