--- a/internet_check.html
+++ b/internet_check.html
@@ -13,12 +13,14 @@
     // Cordova is ready
     //
     function onDeviceReady() {
+      alert("Device Ready");
         navigator.geolocation.getCurrentPosition(onSuccess, onError);
     }
 
     // onSuccess Geolocation
     //
     function onSuccess(position) {
+      alert("Success Function");
         var element = document.getElementById('geolocation');
         element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
                             'Longitude: '          + position.coords.longitude             + '<br />' +
@@ -33,6 +35,7 @@
     // onError Callback receives a PositionError object
     //
     function onError(error) {
+      alert("Error Function");
         alert('code: '    + error.code    + '\n' +
                 'message: ' + error.message + '\n');
     }
