--- a/internet_check.html
+++ b/internet_check.html
@@ -42,7 +42,7 @@
 
     </script>
   </head>
-  <body>
+  <body onload="onDeviceReady()">
     <p id="geolocation">Finding geolocation...</p>
   </body>
 </html>
