--- a/internet_check.html
+++ b/internet_check.html
@@ -21,15 +21,12 @@
     //
     function onSuccess(position) {
       alert("Success Function");
-        var element = document.getElementById('geolocation');
-        element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
-                            'Longitude: '          + position.coords.longitude             + '<br />' +
-                            'Altitude: '           + position.coords.altitude              + '<br />' +
-                            'Accuracy: '           + position.coords.accuracy              + '<br />' +
-                            'Altitude Accuracy: '  + position.coords.altitudeAccuracy      + '<br />' +
-                            'Heading: '            + position.coords.heading               + '<br />' +
-                            'Speed: '              + position.coords.speed                 + '<br />' +
-                            'Timestamp: '          +                                   position.timestamp          + '<br />';
+        cordova.plugins.diagnostic.isLocationEnabled(function(enabled){
+          alert("Success Function In Plugin");
+    
+}, function(error){
+    alert("Failure Function in plugin");
+});
     }
 
     // onError Callback receives a PositionError object
