--- a/check_out.html
+++ b/check_out.html
@@ -167,7 +167,7 @@
 
 <div class="col-sm-6 col-xs-6 col-md-6 col-lg-6">
 	
-	<input type="number"  max="9999999" size="450px"  step="any"   pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="exampleInputexpenses1" placeholder="Expenses($)"/>
+	<input type="text"  max="9999999" size="450px"  step="any"   pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="exampleInputexpenses1" placeholder="Expenses($)"/>
 
 </div>
 
