--- a/check_out.html
+++ b/check_out.html
@@ -166,14 +166,14 @@
 
 <div class="col-sm-6 col-xs-6 col-md-6 col-lg-6">
 	
-	<input type="number"  min="1" max="99999" maxlength="7" size="450px"  step="any"   pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="exampleInputexpenses1" placeholder="Expenses($)"/>
+	<input type="number"  min="1" max="9999999" maxlength="7" size="450px"  step="any"   pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="exampleInputexpenses1" placeholder="Expenses($)"/>
 
 </div>
 
 
 <div class="col-sm-6 col-xs-6 col-md-6 col-lg-6">
 	
-	<input type="tel"  size="450px" step="any" maxlength="5" pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="exampleInputmileage1" placeholder="Mileage"/>
+	<input type="number"  min="1" max="99999" size="450px" step="any" maxlength="5" pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="exampleInputmileage1" placeholder="Mileage"/>
 
 </div>
 
