--- a/check-in.html
+++ b/check-in.html
@@ -168,14 +168,14 @@ $('#gobtn').html("Check-In");
 
 <div class="col-sm-6 col-xs-6 col-md-6 ">
 	<label for="exampleInputexpenses1"></label>
-	<input type="tel"  size="450px"  step="any" maxlength="7" pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)"   class="form-control" id="expenses1" placeholder="Expenses($)"/>
+	<input type="tel"  size="450px" min="1" max="9999999" step="any" maxlength="7" pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)"   class="form-control" id="expenses1" placeholder="Expenses($)"/>
 
 </div>
 
 
 <div class="col-sm-6 col-xs-6 col-md-6 ">
 	<label for="exampleInputmiledge1"></label>
-	<input type="tel"  size="450px" step="any" maxlength="5"  pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="mileage1" placeholder="Mileage"/>
+	<input type="tel"  size="450px" step="any"  min="1" max="99999" maxlength="5"  pattern="(0\.((0[0-9]{1})|([0-9]{1}([0-9]{1})?)))|(([0-9]+[0-9]*)(\.([0-9]{1,2}))?)" class="form-control" id="mileage1" placeholder="Mileage"/>
 
 </div>
 
