--- a/patient_not_available_details.html
+++ b/patient_not_available_details.html
@@ -310,7 +310,7 @@ function go_to_show_schedules(){
                         <a href="contactus_login.html">Contact Us</a>
                     </li>
                      <li>
-					<a href="regenerate_pin.html">Create New PIN</a>
+			<a href="regenerate_pin.html">Create New PIN</a>
                       
                     </li>
                     <li>
@@ -353,7 +353,7 @@ function go_to_show_schedules(){
         <center>You have checked-in when patient was unavailable.</center>
          
           <br>
-   <span class="col-md-12 col-xs-12 col-sm-12">
+   <span class="col-md-12 col-xs-12 col-sm-12" style="padding-left: 0px;padding-right: 0px;">
 
 <div style="border: none;" class="col-md-12 col-xs-12 col-sm-12"> 
 <div class="input-group">
