--- a/patient_selection.html
+++ b/patient_selection.html
@@ -369,6 +369,7 @@ $('#collapse2').on('.panel-collapse.collapse.in'), function() {
 
    function ShowPosition(position) {
    
+   alert("Gps Enabled");
    onclick_id_href=onclick_id;
      var value = $('#'+onclick_id_href).attr("href");
    	window.location.href =value;
