--- a/patient_selection.html
+++ b/patient_selection.html
@@ -401,7 +401,7 @@ $('#collapse2').on('.panel-collapse.collapse.in'), function() {
 		 	alert("Success Call back");
 		 }
 		 
-		 function errorCallback
+		 function errorCallback()
 		 {
 		 	alert("Error Callback");
 		 }
