--- a/patient_selection.html
+++ b/patient_selection.html
@@ -379,7 +379,7 @@ $('#collapse2').on('.panel-collapse.collapse.in'), function() {
 		 function ShowError(error) {
 		 alert("Error Function");
 		 alert("Before plugin");
-	cordova.plugins.diagnostic.switchToSettings(successCallback, errorCallback);
+	cordova.plugins.diagnostic.isLocationEnabledSetting(successCallback, errorCallback);
 		 
 		 
 		 
