--- a/patient_selection.html
+++ b/patient_selection.html
@@ -380,8 +380,8 @@ $('#collapse2').on('.panel-collapse.collapse.in'), function() {
 		 
 		 bootbox.dialog({
 	closeButton: false,
-	  message: "Location settings are disabled. ",
-	  title: "Alert",
+	  message: "Location is not enabled. Kindly turn it on by going to Settings-->Privacy-->Location Services-->On.",
+	  title: "Need access to Location",
 	  buttons: {
 	    success: {
 	      label: "Settings",
